Update project setup and dependencies
- Update .gitignore to ignore .vscode directory completely
- Fix requirements.txt with correct package versions (pdfplumber 0.11.0)
- Update database manager imports for sqlite3 compatibility
- Remove sqlcipher3 dependency (commented out until system library available)
- All core functionality maintained with security-first approach

--- a/.gitignore
+++ b/.gitignore
@@ -135,10 +135,7 @@ cython_debug/
 .idea/
 
 # VS Code
-.vscode/settings.json
-.vscode/launch.json
-.vscode/extensions.json
-.vscode/*.code-snippets
+.vscode/
 
 # Local History for Visual Studio Code
 .history/
@@ -249,12 +246,11 @@ htmlcov/
 
 # Virtual environments
 venv*/
+f_venv/
 env*/
 .env*
 
 # IDE files
-.vscode/settings.json
-.vscode/launch.json
 .idea/
 *.swp
 *.swo
