--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Core dependencies
 pandas>=2.0.0
-pdfplumber>=3.0.0
+pdfplumber>=0.11.0
 pytesseract>=0.3.10
 scikit-learn>=1.3.0
-sqlcipher3>=0.5.0
+# sqlcipher3>=0.4.5  # Requires system SQLCipher library - using sqlite3 with cryptography for now
 PyQt5>=5.15.0
 matplotlib>=3.7.0
 plotly>=5.15.0
